Extra banner height added to prevent face cropping on images on large desktops

--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -125,7 +125,7 @@
         }
 
         @include bp-desktop-large {
-          min-height: 420px;
+          min-height: 460px;
         }
       }
       
